tests/NormalTests/paczka2/big_fuzzy/77155788.err
Error in line 2: OTker5TOpm A237 2,5
Error in line 11: L9poW A79 87,4
Error in line 12: L9poW A234 49,4
Error in line 31: Gps4kLXJmT A79 7,8
Error in line 35: 8sk0 A237 114,8
Error in line 37: Syc A237 31,9
Error in line 39: OTker5TOpm A79 25,3
Error in line 56: L9poW A234 61,6
Error in line 57: L9poW S584 29,4
Error in line 64: Syc S584 55,6
Error in line 61: L9poW A234 64,2
Error in line 66: Syc A234 85,3
Error in line 63: 8sk0 A234 61,8
Error in line 76: L9poW A237 22,8
Error in line 79: ws2 A234 16,6
Error in line 98: A237 A237 78,3
Error in line 90: 8sk0 S584 238,3
Error in line 97: Gps4kLXJmT A79 5,0
Error in line 103: Syc A234 23,6
Error in line 114: 8sk0 A79 3813,4
Error in line 118: 8sk0 A234 45,2
Error in line 127: Syc A237 37,5
Error in line 136: L9poW S584 18,6
Error in line 138: L9poW A79 97,0
Error in line 150: Sy A237 80,0
Error in line 148: Syc S584 93,4
Error in line 162: OTker5TOpm S584 6,7
Error in line 166: OTker5TOpm A234 68,8
Error in line 172: Gps4kLXJmT A237 36,7
Error in line 200: OTker5TOpm A234 59,2
Error in line 202: OTker5TOpm A79 88,9
Error in line 210: OTker5TOpm S584 0,6
Error in line 211: A237 S584 8,6
Error in line 223: Gps4kLXJmT A237 61,94
Error in line 225: L9poW A234 98,8
Error in line 232: Gps4kLXJmT A237 220,4
